# stock_prediction

./: Dockerfile  README.md  check_yfinance.py  debug_yf.py  deploy_gcp.sh  deploy_to_gce.sh  install_and_run.sh  multigroup.csv  pyproject.toml  requirements.txt  run_pipeline.py
data/: filtered_tickers.csv
models/: HDFCBANK.NS_lstm.pth  HDFCBANK.NS_transformer.pth  ICICIBANK.NS_lstm.pth  ICICIBANK.NS_transformer.pth  INFY.NS_lstm.pth  INFY.NS_transformer.pth  RELIANCE.NS_lstm.pth  RELIANCE.NS_transformer.pth  TCS.NS_lstm.pth  TCS.NS_transformer.pth
models/HDFCBANK.NS_xgb/: xgb_high.pkl  xgb_low.pkl
models/ICICIBANK.NS_xgb/: xgb_high.pkl  xgb_low.pkl
models/INFY.NS_xgb/: xgb_high.pkl  xgb_low.pkl
models/RELIANCE.NS_xgb/: xgb_high.pkl  xgb_low.pkl
models/TCS.NS_xgb/: xgb_high.pkl  xgb_low.pkl
results/: model_comparison.csv
src/data/: features.py  loader.py  preprocessor.py  process_multigroup.py  ticker_fetcher.py
src/evaluation/: cohort_analysis.py  metrics.py  visualizations.py
src/models/: ensemble_model.py  lstm_model.py  transformer_model.py  xgboost_model.py
src/training/: trainer.py  tuner.py
