[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_prediction"
version = "0.1.0"
description = "Stock prediction system for long-term investing using LSTM, Transformer, and XGBoost"
authors = [
  { name="User", email="user@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "xgboost",
    "optuna",
    "matplotlib",
    "seaborn",
    "yfinance",
    "lxml",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/example/stock_prediction"
